# ChangeLog for www-servers/nginx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Aug 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.47.ebuild,
  +nginx-0.8.48.ebuild:
  new version

  31 Jul 2010; Rion <rion4ik@gmail.com> -nginx-0.8.46.ebuild,
  +nginx-0.8.47.ebuild:
  new version

  21 Jul 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.42.ebuild,
  +nginx-0.8.46.ebuild:
  new version

  05 Jul 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.40.ebuild,
  +nginx-0.8.42.ebuild:
  new version

*nginx-0.8.40

  08 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru> +nginx-0.8.40.ebuild:
  bump

  07 Jun 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.38.ebuild,
  +nginx-0.8.38-r1.ebuild:
  synced with portage

  01 Jun 2010; Rion <rion4ik@notagmail.com> nginx-0.8.38.ebuild:
  remove broken mp4 module

  31 May 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.36-r1.ebuild,
  +nginx-0.8.38.ebuild:
  new version

  15 May 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.34-r1.ebuild, -nginx-0.8.35.ebuild, -nginx-0.8.36.ebuild,
  metadata.xml:
  remowe old ebuld

  04 May 2010; Rion <rion4ik@notagmail.com> +nginx-0.8.36-r1.ebuild:
  sync with portage

*+nginx-0.8.36

  26 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru> +nginx-0.8.36.ebuild:
  new version

  12 Mar 2010; <slep@gentoo.org> -nginx-0.8.32.ebuild, -nginx-0.8.33.ebuild,
  nginx-0.8.34-r1.ebuild, metadata.xml:
  delete old ebuild

  12 Mar 2010; <slep@gentoo.org> nginx-0.8.34-r1.ebuild, metadata.xml:
  QA fix

  02 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.30-r51.ebuild, +nginx-0.8.33.ebuild:
  add new

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.29-r51.ebuild, -nginx-0.8.31-r50.ebuild:
  drop old version

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +nginx-0.8.32.ebuild,
  metadata.xml:
  version bump,scgi support

  15 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> -nginx-0.8.28-r50.ebuild:
  delete old ebuild	
