@@ -6,7 +6,7 @@ AUX passenger-CFLAGS.patch 646 RMD160 12f1e5f80fd2694fed612226561670f9a0f7f556 S
 DIST Mod_rrd_graph-0.2.0.tar.gz 3793 RMD160 fbb9698f18fa69cdfd311b0f7d43ccfe046937f0 SHA1 12b75d833d54aece7838359ef1214fe95602c051 SHA256 fbb095b5dbab87ab0ef6be663d9837ec07efbb5df5250efe40fbbab1b898372d
 DIST chunkin-nginx-module-0.19.tgz 84817 RMD160 421457c805701d1bf740caad6d36163a32bfcfba SHA1 bb1a39de6a93db76946ea936564c6a36825ee5a1 SHA256 fb5494cf8bf449b01c73b49c5da39da614ae32be55b4dd354633e1b2dce770f0
 DIST nginx-0.8.38.tar.gz 623969 RMD160 62b23252d16a861ea092cbd8bc28882e4f84157d SHA1 8e48ac109b07f0542ccda93e5b4bab67d9598aef SHA256 a97241207e7060aa04571e313908f22e007df5b2667c42274420e6a961b2c8c5
-DIST nginx-0.8.48.tar.gz 647147 RMD160 b73232610244b4ea7caff92ebf67aa6a4b937ce7 SHA1 eaae7c55f332c8f26ce92548a01e5d0a9323ddeb SHA256 3117671089b9bc9069ab5a74a965da9203425b804258aa867877f4153ba8a068
+DIST nginx-0.8.49.tar.gz 647565 RMD160 ee891f36c4a60973aeec8c70f52c47407d1fb276 SHA1 43efd150a980970728a9363c64a36c46e3069a7f SHA256 d6ae196b90fc7d891f3c62d9d9d67f9aa1d8afdeb7da23feebd0163c775a3a3d
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST ngx-http-headers-more-0.08.tar.gz 71764 RMD160 63ee177d5abca7c958c88197f02a4063c88dba7c SHA1 b8c6f2499e44fd9fb84bef87b3f4588ddfa70798 SHA256 3e3bc43e98d95b8a0923cf6ec1af5644e855d15e33b6553096e02c53c69bc4d5
 DIST ngx-http-headers-more-0.13.tar.gz 76271 RMD160 b11fbdf8e6fba5327fedd22e517da36340ec2473 SHA1 29def6aa44faf906d3c400b6379d6dd65d959590 SHA256 52e2cb3b81327e9225cfa87291b93dd96b798702f8e3b0f20f06d38850fc2629
@@ -16,6 +16,6 @@ DIST passenger-2.2.11.tar.gz 2058085 RMD160 54ee5ab25155adaf4b6be9dc0aee190a3232
 DIST passenger-2.2.15.tar.gz 2128473 RMD160 52d0eb505d6c19e45ccc0dac8d1e675aed505c14 SHA1 dbb2f3346061872a43efc554990d8993172c8ff9 SHA256 95a9f61070d268ecaa311539d8e28b348765ca0e1528665ef928fc4b4bcc1436
 DIST uwsgi-0.9.5.1.tar.gz 120134 RMD160 6ad9b928a9bbf764679c1db3b1326f8d445febbb SHA1 ec4a47d7f7af4cba88c750b795194cb3c780d1e5 SHA256 2efab0f2cea90261c3ee56026618955c15ac7467ba6f0dbfe9e685da28204bc1
 EBUILD nginx-0.8.38-r1.ebuild 10966 RMD160 360b2ce8de499cdc6bce73e9cc3b63fa7ed12834 SHA1 13ee7f40584175eef932e88b338faf285f22e417 SHA256 d7eac58185fc7df3379c2704ec972687ea0bc10a7a4226e5403aad7109aa719b
-EBUILD nginx-0.8.48.ebuild 10905 RMD160 f4047f4bf94e5b20df59cf7d03a68cbc5a0d67c8 SHA1 0a9e2a87e6850ab4092ef346cbe8542f1a527717 SHA256 38703ba9a90b40ce02120a740b0444e39999d46e169ae80eed6dd0c97c2faea3
-MISC ChangeLog 3758 RMD160 42221ef269d551d6e63d0b4be7e8538c53e535ab SHA1 bf1edc4f1941f372990e9bcb13526907b0961d84 SHA256 d9d7f8233e58ba7fd4e54e318583f4bb04802d93856620ac0bb7372bf938e08e
+EBUILD nginx-0.8.49.ebuild 11197 RMD160 9fa2b0e153a0557d991d554810c34685ec812304 SHA1 9f030b30919d6aa22da8bcbb5e089451d0ca4c0a SHA256 132943f40626e363f857226edd392663273b14a58beb01080f3992b084bf57b1
+MISC ChangeLog 3861 RMD160 b1536607409e614b75bf06e8694ecb9168db1a5b SHA1 387b6749b582535cda9581ebcb1f6b81ca989c8e SHA256 1be1b6b8f279a2f1938e2bc2334a53d205a5ad89bb3b5a377b58ffcc47c48f8a
 MISC metadata.xml 700 RMD160 fdc32c78fe99a870f61c081172c198a3ebe2dae6 SHA1 af42859ae91c302e736f00a7e06cbbde7fc5d65b SHA256 5b2325acd26d95505454442f8cdf6c49f86b32b9c73e623c2a47bcfb20ccd000
